tests/algorithms/x/Elixir/data_structures/trie/trie.error
run: exit status 1
    warning: variable "child_idx" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 42 │           child_idx = -1
    │           ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:42:11: Main.insert/2

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 65 │       {curr, i, nodes} = try do
    │              ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:65:14: Main.insert/2

    warning: variable "trie" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 74 │       trie = Map.put(trie, :nodes, nodes)
    │       ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:74:7: Main.insert/2

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 107 │       {curr, i} = try do
     │              ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:107:14: Main.find/2

     warning: variable "nodes" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 153 │   nodes = List.replace_at(nodes, idx, node_)
     │   ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:153:3: Main.delete/2

     warning: the underscored variable "_delete" is used after being set. A leading underscore indicates that the value of the variable should be ignored. If this is intended please rename the variable to remove the underscore
     │
 156 │       _delete.(0, 0)
     │       ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:156:7: Main.delete/2

     warning: variable "trie" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 157 │       trie = Map.put(trie, :nodes, nodes)
     │       ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:157:7: Main.delete/2

     error: undefined function _delete/2 (expected Main to define such a function or for it to be imported, but none are available)
     │
 142 │   should_delete = _delete(child_idx, pos + 1)
     │                   ^^^^^^^
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:142:19: Main.delete/2

     error: undefined function dfs/2 (expected Main to define such a function or for it to be imported, but none are available)
     │
 170 │     dfs(node_.children[key], (word <> key))
     │     ^^^
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs:170:5: Main.print_words/1

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/data_structures/trie/trie.exs: cannot compile module Main (errors have been logged)

